doc/grammar.txt
# Definitions
left_parenthesis  = "("
right_parenthesis = ")"
plus              = "+"
minus             = "-"
multiply          = '*'
divide            = '/'
die_tag           = [dD]

integer = ("0" | [1-9] [0-9]*)

# Grammar
<roll_expression> ::= <expression>

<expression> ::= <arithmetic_expression>

<arithmetic_expression> ::= <addition_or_subtraction>

<addition_or_subtraction>            ::= <product_or_division> <addition_or_subtraction_right_hand>
<addition_or_subtraction_right_hand> ::= <plus_or_minus> <product_or_division> <addition_or_subtraction_right_hand>
                                       | &

<product_or_division>            ::= <positive_or_negative> <product_or_division_right_hand>
<product_or_division_right_hand> ::= <multiply_or_divide> <positive_or_negative> <product_or_division_right_hand>
                                   | &

<positive_or_negative> ::= <optional_signal> <dice_set_or_value>

<optional_signal> ::= <plus_or_minus>
                    | &

<dice_set_or_value> ::= <value> <optional_die>
                      | <die>

<optional_die> ::= <die>
                 | &

<die> ::= die_tag <value>

<value> ::= <parenthesized_expression>
          | <literal>

<parenthesized_expression> ::= left_parenthesis <expression> right_parenthesis

<literal> ::= <numeric_literal>

<numeric_literal> ::= integer

<plus_or_minus> ::= plus
                  | minus

<multiply_or_divide> ::= multiply
                       | divide
